--- a/views/layout.erb
+++ b/views/layout.erb
@@ -151,13 +151,13 @@ table.list tr:nth-child(odd) {
 <% end %>
 </div>
     <div id="main">
-			<% if @flash[:success] %>
+			<% if defined? @flash[:success] %>
 			<div class="flash success">
 				<%= @flash[:success] %>
 			</div>
 			<% end %>
 
-			<% if @flash[:error] %>
+			<% if defined? @flash[:error] %>
 			<div class="flash error">
 				<%= @flash[:error] %>
 			</div>
