--- a/views/auth/login.erb
+++ b/views/auth/login.erb
@@ -1,4 +1,4 @@
-<form action="/auth/login" method="post">
+<form action="/a/login" method="post">
   <p>Username: <input type="text" name="user[username]" /></p>
   <p>Password: <input type="password" name="user[password]" /></p>
   <input type="submit" value="Log In" />
