--- a/views/card/list.erb
+++ b/views/card/list.erb
@@ -10,8 +10,8 @@
   <tr>
     <td><%= card[:card_id] %></td>
     <td><%= card[:username] %></td>
-    <td><%= card[:enabled] %></td>
-    <td><%= card[:soundfile] %></td>
+    <td><% if card[:enabled] %>True<% else %>False<% end %></td>
+    <td><% if card[:soundfile].nil? %>None<% else %><%= card[:soundfile] %><% end %></td>
     <td><%= card[:description] %></td>
   </tr>
   <% end %>
