use empty? not nil?
Signed-off-by: Jayden Callahan <rails@rizon.net>

--- a/views/card/list.erb
+++ b/views/card/list.erb
@@ -11,7 +11,7 @@
     <td><%= card[:card_id] %></td>
     <td><%= card[:username] %></td>
     <td><% if card[:enabled] %>True<% else %>False<% end %></td>
-    <td><% if card[:soundfile].nil? %>None<% else %><%= card[:soundfile] %><% end %></td>
+    <td><% if card[:soundfile].empty? %>None<% else %><%= card[:soundfile] %><% end %></td>
     <td><%= card[:description] %></td>
   </tr>
   <% end %>
