lots of things i dont remember what
Signed-off-by: Jayden Callahan <rails@rizon.net>

--- a/views/card/list.erb
+++ b/views/card/list.erb
@@ -1,8 +1,8 @@
 <table>
   <tr>
     <th>ID</th>
-    <th>user</th>
-    <th>enabled?</th>
+    <th>user&nbsp;&nbsp;&nbsp;</th>
+    <th>enabled?&nbsp;</th>
     <th>sound file</th>
     <th>description</th>
   </tr>
