--- a/views/card/add.erb
+++ b/views/card/add.erb
@@ -1,6 +1,6 @@
 <form action="/c/add" method="post">
   <p>User: <input type="text" name="card[user]" /></p>
-  <p>Card ID: <input type="password" name="card[cid]" /></p>
-  <p>Card Type: <input type="password" name="card[ctype]" /></p>
+  <p>Card ID: <input type="text" name="card[cid]" /></p>
+  <p>Card Type: <input type="text" name="card[ctype]" /></p>
   <input type="submit" value="Log In" />
 </form>
