GRammar, and a form embedded in the list
Signed-off-by: Jayden Callahan <rails@rizon.net>

--- a/views/card/add.erb
+++ b/views/card/add.erb
@@ -2,5 +2,5 @@
   <p>User: <input type="text" name="card[user]" /></p>
   <p>Card ID: <input type="text" name="card[cid]" /></p>
   <p>Card Type: <input type="text" name="card[ctype]" /></p>
-  <input type="submit" value="Log In" />
+  <input type="submit" value="Add" />
 </form>
