--- a/views/layout.erb
+++ b/views/layout.erb
@@ -151,16 +151,7 @@ table.list tr:nth-child(odd) {
 <% end %>
 </div>
     <div id="main">
-			<% if defined? @flash[:success] %>
-			<div class="flash success">
-				<%= @flash[:success] %>
-			</div>
-			<% end %>
-
-			<% if defined? @flash[:error] %>
-			<div class="flash error">
-				<%= @flash[:error] %>
-			</div>
+      <%= styled_flash %>
 			<% end %>
 
 			<%= yield %>
